--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,18 @@ body {
     background-image: url(img/darkNoise.jpg);
     background-color: #000;
     font-family: Tahoma,Arial,sans-serif;
+    font-size: 13px;
+    max-height: 100vh;
+    min-width: 100hw;
 }
 
 .topbar {
     display: block;
     background-image: url(img/darkNoiseTopBar.jpg);
-    color: #ccc;
+    color: #000;
     position: absolute;
     width: 100%;
+    height: 32px;
 }
 
 #game {
@@ -21,8 +25,8 @@ body {
     left: 0px;
     top: 0px;
     right: 0px;
-    bottom: 0px;
     display: grid;
+    height: 94vh;
 }
 
 #left_bar {
@@ -30,9 +34,17 @@ body {
 }
 
 #middle_bar {
-    grid-column: 2;
+    grid-column: 3;
 }
 
 #right_bar {
-    grid-column: 3;
+    grid-column: 5;
+}
+
+#vertical_panel_left {
+    grid-column: 2;
+}
+
+#vertical_panel_right {
+    grid-column: 4;
 }
